# Daily-Algorithms

./: .gitignore  README.md
9/: #102 cifre.cpp  #1258 scadere2.cpp  #1260 asii.cpp  #1261 CatePare.cpp  #1273 uciv.cpp  #1282 radical.cpp  #1343 radical1.cpp  #175 picioare.cpp  #2061 Tren Japonez.cpp  #2201 Salut.cpp  #2240 Animale.cpp  #2263 Camioane.cpp  #2263 Trucks.cpp  #2377 Pisici.cpp  #2593 Unghiuri Adiacente.cpp  #2599 a16.cpp  #2600 expatr.cpp  #2602 ultimacifraapartiiintregi.cpp  #2603 primacifraapartiizecimale.cpp  #2617 Taieturi.cpp  #2764 InvertedColor.cpp  #2938 Albina.cpp  #3178 Copii2.cpp  #3179 Parc2.cpp  #3180 Marte1.cpp  #3181 Mars3.cpp  #3182 Marte2.cpp  #3210 Cumparaturi.cpp  #3803 AriePoligonRegulat.cpp  #3806 Mediane.cpp  #3978 sabc.cpp  #4041 Multime Gauss.cpp  #4185 Varsta.cpp  #813 Globuri.cpp  #814 triplul.cpp  #815 Lazi.cpp  #939 sum00.cpp  #941 Urare.cpp  #9999 test24.cpp  CMakeLists.txt  (+1 more)
