cmake_minimum_required(VERSION 3.24)
project(9)

set(CMAKE_CXX_STANDARD 23)


add_executable(hello_world hello_world.cpp)
add_executable(939_sum00 "#939 sum00.cpp")
add_executable(941_Urare "#941 Urare.cpp")
add_executable(1258_scadere2 "#1258 scadere2.cpp")
add_executable(1260_asii "#1260 asii.cpp")
add_executable(1273_uciv "#1273 uciv.cpp")
add_executable(813_Globuri "#813 Globuri.cpp")
add_executable(3178_Copii2 "#3178 Copii2.cpp")
add_executable(2240_Animale "#2240 Animale.cpp")
add_executable(3179_Parc2 "#3179 Parc2.cpp")
add_executable(2263_Camioane "#2263 Camioane.cpp")
add_executable(814_triplul "#814 triplul.cpp")
add_executable(3210_Cumparaturi "#3210 Cumparaturi.cpp")
add_executable(3978_sabc "#3978 sabc.cpp")