cmake_minimum_required(VERSION 3.24)
project(9)

set(CMAKE_CXX_STANDARD 23)


add_executable(hello_world hello_world.cpp)
add_executable(939_sum00 "#939 sum00.cpp")
add_executable(941_Urare "#941 Urare.cpp")
add_executable(1258_scadere2 "#1258 scadere2.cpp")
add_executable(1260_asii "#1260 asii.cpp")
add_executable(1273_uciv "#1273 uciv.cpp")
add_executable(813_Globuri "#813 Globuri.cpp")
add_executable(3178_Copii2 "#3178 Copii2.cpp")
add_executable(2240_Animale "#2240 Animale.cpp")
add_executable(3179_Parc2 "#3179 Parc2.cpp")
add_executable(2263_Camioane "#2263 Camioane.cpp")
add_executable(814_triplul "#814 triplul.cpp")
add_executable(3210_Cumparaturi "#3210 Cumparaturi.cpp")
add_executable(3978_sabc "#3978 sabc.cpp")
add_executable(3180_Marte1 "#3180 Marte1.cpp")
add_executable(3182_Marte2 "#3182 Marte2.cpp")
add_executable(3181_Mars3 "#3181 Mars3.cpp")
add_executable(815_Lazi "#815 Lazi.cpp")
add_executable(175_picioare "#175 picioare.cpp")
add_executable(2061_Tren_Japonez "#2061 Tren Japonez.cpp")
add_executable(2201_Salut "#2201 Salut.cpp")
add_executable(2617_Taieturi "#2617 Taieturi.cpp")
add_executable(2938_Albina "#2938 Albina.cpp")
add_executable(2764_InvertedColor "#2764 InvertedColor.cpp")
add_executable(2377_Pisici "#2377 Pisici.cpp")
add_executable(4185_Varsta "#4185 Varsta.cpp")
add_executable(102_cifre "#102 cifre.cpp")
add_executable(2599_a16 "#2599 a16.cpp")
add_executable(1282_radical "#1282 radical.cpp")
add_executable(1343_radical1 "#1343 radical1.cpp")